<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">110024032444757</string>
    <string name="app_name">Decompilation Swampy: The Lost levels</string>
    <string name="app_name_free">"Where's My Water? Free"</string>
    <!-- <string name="error_title">Connection Error</string> -->
    <string name="link_japanese_market_help">Help</string>
    <string name="link_japanese_market_member">Membership</string>
    <string name="link_japanese_market_top">Top Page</string>
    <string name="no">No</string>
    <string name="no_connection_error">Cannot connect to the internet.</string>
    <string name="ok">OK</string>
    <string name="want_to_download">Do you want to download?</string>
    <string name="yes">Yes</string>

    <string name="have_not_obb">No obb found</string>
    <string name="have_obb">obb found，Last update time:</string>
    <string name="start_game">Start Game</string>
    <string name="load_game_obb">Inject OBB</string>
    <string name="edit_game_save">Edit Game Save</string>
    <string name="clear_game_save">Clear Game Save</string>
    <string name="exit_str">Sure Exit？</string>
    <string name="exit_str_title">Exit？</string>
    <string name="url_str_title">Sure Opened？</string>
    <string name="url_str">You Will Open A URL, named: </string>
    <string name="tip">This project uses code from the following repositories https://github.com/StArrayJaN/Where-is-My-Water (This game is recommended to run at 60fps.)</string>
    <string name="cancel">Cancel</string>
    
    <string name="config_game">Config</string>

    <string name="select_obb">选择 OBB 版本</string>
    <string name="loading_obb">正在加载 OBB…</string>
    <string name="switch_profile_success">已切换至 %s</string>
    <string name="reset_save_confirm">确定要重置当前 OBB 的存档到初始状态吗？</string>
    <string name="reset">重置</string>
    <string name="extract_failed">提取初始存档失败，将使用默认存档</string>
    <string name="no_obb_selected">未加载 OBB</string>
</resources>
